# AbwCall-now711

./: .gitignore  .replit  CONTRIBUTING.md  README.md  app.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md
.github/workflows/: android-build.yml
app/: _layout.tsx
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  security.py
backend/app/crud/: base.py  crud_call.py  crud_contact.py  crud_transaction.py
backend/app/db/: base.py  session.py
backend/app/models/: call.py  contact.py  transaction.py  user.py
backend/app/schemas/: transaction.py
backend/app/services/: payment_service.py  twilio_service.py
backend/tests/: test_auth.py
frontend/: .env.example  app.json  package-lock.json  package.json  tsconfig.json
frontend/app/: +not-found.tsx  _layout.tsx  splash.tsx
frontend/app/(tabs)/: contacts.tsx  home.tsx  wallet.tsx
frontend/app/auth/: login.tsx  signup.tsx
frontend/app/call/: [id].tsx
frontend/components/: CallInterface.tsx  ContactItem.tsx  PhoneNumberInput.tsx  RateDisplay.tsx  TransactionItem.tsx  WalletCard.tsx
frontend/constants/: config.ts
frontend/contexts/: AuthContext.tsx  CallContext.tsx
frontend/hooks/: useContacts.ts
frontend/lib/: api.ts  firebase.ts  utils.ts  webrtc.ts
frontend/store/: useStore.ts
frontend/types/: auth.ts  call.ts  contact.ts
frontend/utils/: formatting.ts  storage.ts
nginx/: nginx.conf
(+4 files in other folders)
